<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/item_background"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <TextView
        android:id="@+id/cancel_task"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center"
        android:text="@string/cancel_task" />

    <View
        android:id="@+id/line0"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ccc"
        app:layout_constraintTop_toBottomOf="@id/cancel_task" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/choose_reason"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@drawable/cancel_dialog_bg"
        app:layout_constraintTop_toBottomOf="@id/line0">

        <TextView
            android:id="@+id/tv_click_reason"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:text="@string/cancel_reason"
            android:textColor="#000" />

        <TextView
            android:id="@+id/et_reason"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:gravity="center"
            android:hint="@string/choose_reason"
            android:textSize="12sp"
            app:layout_constraintLeft_toRightOf="@id/tv_click_reason" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:src="@mipmap/up"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/et_reason"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:id="@+id/visiable_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@drawable/cancel_dialog_bg"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/choose_reason">

        <TextView
            android:id="@+id/reason1"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/demo_reason" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#fff" />

        <TextView
            android:id="@+id/reason2"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/demo_reason" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#fff" />

        <TextView
            android:id="@+id/reason3"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/demo_reason" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#fff" />

        <TextView
            android:id="@+id/reason4"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/demo_reason" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#fff" />

        <TextView
            android:id="@+id/reason5"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/demo_reason" />

    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/gone_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@id/choose_reason">

        <RelativeLayout
            android:id="@+id/details_reason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@drawable/cancel_dialog_bg">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:text="@string/reason_details"
                android:textColor="#000" />

            <EditText
                android:id="@+id/et_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/details_reason"
                android:minLines="7"
                android:textSize="12sp" />
        </RelativeLayout>

        <View
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="#ccc"
            app:layout_constraintTop_toBottomOf="@id/details_reason" />

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/cancel"
            app:layout_constraintLeft_toLeftOf="@id/tv_cancel"
            app:layout_constraintRight_toLeftOf="@+id/tv_ok"
            app:layout_constraintTop_toBottomOf="@id/line1" />

        <TextView
            android:id="@id/tv_ok"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/OK"
            app:layout_constraintLeft_toRightOf="@id/tv_cancel"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line1" />


        <View
            android:layout_width="1dp"
            android:layout_height="50dp"
            android:background="#ccc"
            app:layout_constraintLeft_toRightOf="@id/tv_cancel"
            app:layout_constraintRight_toLeftOf="@id/tv_ok"
            app:layout_constraintTop_toBottomOf="@id/line1" />


    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>