<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    android:orientation="vertical">

    <include layout="@layout/common_title"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="请输入旧密码"
            android:padding="12dp"
            android:textColor="@color/text_gray1"
            android:textColorHint="@color/text_gray3"
            android:textSize="@dimen/text_size_14" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/main_bg"></View>

        <EditText
            android:id="@+id/et_new_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/enter_new_password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textColor="@color/text_gray1"
            android:textColorHint="@color/text_gray3"
            android:textSize="@dimen/text_size_14" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/main_bg"></View>

        <EditText
            android:id="@+id/et_check_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/enter_new_password_again"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textColor="@color/text_gray1"
            android:textColorHint="@color/text_gray3"
            android:textSize="@dimen/text_size_14" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_sumit"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_blue_gradient_btn"
        android:text="@string/reset_password"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_16" />
</LinearLayout>